src/examples/valid/plot.ra
func main(): void {
  dataframe = read_csv("song_data_clean.csv");
  histogram(dataframe, "song_duration_ms", 5);
  plot(dataframe, "song_duration_ms", "danceability");
}
