src/examples/invalid/static/more-than-one-data-frame.ra
func main(): void {
  dataframe = read_csv("song_data_clean.csv");
  dataframe_2 = read_csv("song_data_clean.csv");
}
